--- a/config.yml
+++ b/config.yml
@@ -7,20 +7,20 @@
 # Mail Server #
 ###############
 
-# mail.backend: 'smtp'  # Use dummy if you want to disable email entirely
-# mail.host: 'localhost'
-# mail.port: 25
-# mail.username: ''
-# mail.password: ''
-# mail.use-tls: false
+mail.backend: 'smtp'  # Use dummy if you want to disable email entirely
+mail.host: 'smtp.russellcloud.cn'
+mail.port: 25
+mail.username: 'zhen.huang@russellcloud.cn'
+mail.password: 'RussellCloud2018'
+mail.use-tls: false
 # The email address to send on behalf of
-# mail.from: 'root@localhost'
+mail.from: 'notify@russellcloud.cn'
 
 # If you'd like to configure email replies, enable this.
-# mail.enable-replies: false
+mail.enable-replies: false
 
 # When email-replies are enabled, this value is used in the Reply-To header
-# mail.reply-hostname: ''
+mail.reply-hostname: 'Sentry'
 
 # If you're using mailgun for inbound mail, set your API key and configure a
 # route to forward to /api/hooks/mailgun/inbound/
