--- a/config.yml
+++ b/config.yml
@@ -11,17 +11,16 @@ mail.backend: 'smtp'  # Use dummy if you want to disable email entirely
 #mail.host: 'smtp.russellcloud.cn'
 mail.host: 'mail.hust.edu.cn'
 mail.port: 25
-mail.username: 'u201414180@hust.edu.cn'
+mail.username: 'danceiny@hust.edu.cn'
 mail.password: 'RussellCloud2017'
 mail.use-tls: false
 # The email address to send on behalf of
-mail.from: 'notify@russellcloud.cn'
+mail.from: 'danceiny@hust.edu.cn'
 
 # If you'd like to configure email replies, enable this.
 mail.enable-replies: false
-
 # When email-replies are enabled, this value is used in the Reply-To header
-mail.reply-hostname: 'Sentry'
+#mail.reply-hostname: 'Sentry'
 
 # If you're using mailgun for inbound mail, set your API key and configure a
 # route to forward to /api/hooks/mailgun/inbound/
